--- a/leslie-practice.qmd
+++ b/leslie-practice.qmd
@@ -15,24 +15,108 @@ my_matrix <- matrix(data = my_values, nrow = 2, ncol = 5, byrow = TRUE)
 my_matrix
 ```
 
-```{r}
-my_values2 <- seq(from = 1, to = 15, by = 1)
 
-my_values2
-
-```
-```{r}
-my_matrix2 <- matrix(my_values2, nrow = 3, ncol = 5, byrow = TRUE)
-
-my_matrix2
-```
 
 ```{r}
 4 * my_matrix
 ```
 
 ```{r}
+my_values2 <- seq(from = 21, to = 30, by = 1)
+
+my_matrix2 <- matrix(my_values2, nrow = 2, byrow = TRUE)
+
+my_matrix2
+
+```
+
+```{r}
+my_matrix + my_matrix2
+```
+```{r}
+my_matrix2 - my_matrix
+```
+
+```{r}
+cats <- matrix(data = c(0,4,3,1), nrow = 2, byrow = TRUE)
+dogs <- matrix(data = c(6, -3,0,2), nrow = 2, byrow = TRUE)
+
+cats
 
 
+```
+
+```{r}
+dogs
+
+```
+
+```{r}
+cats %*% dogs
+```
+
+```{r}
+insect_leslie <- matrix(c(0,0,600,0.2,0,0,0,0.08,0), 
+                        nrow = 3, 
+                        ncol = 3, 
+                        byrow = TRUE)
+insect_leslie
+```
+```{r}
+insect_y0 <- c(12000, 700, 500)
+```
+
+```{r}
+insect_y1 <- insect_leslie %*% insect_y0
+
+insect_y1
+
+```
+```{r}
+insect_y2 <- insect_leslie %*% insect_y1
+
+insect_y2
+```
+
+```{r}
+insect_y3 <- insect_leslie %*% insect_y2
+
+insect_y3
+```
+
+```{r}
+insect_y4 <- insect_leslie %*% insect_y3
+
+insect_y4
+```
+
+```{r}
+tree_leslie <- matrix(c(0,0,5000,0.1,0,0,0,0.06,0.95), nrow =3, ncol =3, byrow = TRUE)
+
+tree_leslie
+```
+```{r}
+tree_y0 <- matrix(c(5000,0,0))
+
+tree_y1 <- tree_leslie %*% tree_y0
+
+tree_y1
+```
+```{r}
+tree_y2 <- tree_leslie %*% tree_y1
+
+tree_y2
+```
+
+```{r}
+tree_y3 <- tree_leslie %*% tree_y2
+
+tree_y3
+```
+
+```{r}
+tree_y4 <- tree_leslie %*% tree_y3
+
+tree_y4
 ```
 
